--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Syne:wght@400;500;600;700&family=Work+Sans:wght@300;400;500;600&display=swap" rel="stylesheet">
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://amplichain.com/" />
+    <meta property="og:title" content="Amplichain - sieć muzycznych możliwości" />
+    <meta property="og:description" content="Platforma łącząca artystów, producentów i fanów muzyki w Polsce" />
+    <meta property="og:image" content="https://amplichain.com/og-image.jpg" />
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://amplichain.com/" />
+    <meta property="twitter:title" content="Amplichain - sieć muzycznych możliwości" />
+    <meta property="twitter:description" content="Platforma łącząca artystów, producentów i fanów muzyki w Polsce" />
+    <meta property="twitter:image" content="https://amplichain.com/og-image.jpg" />
     <script async src="https://tally.so/widgets/embed.js"></script>
     <title>Amplichain - sieć muzycznych możliwości</title>
   </head>
