--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="./icon-ampli.webp" />
+    <link rel="icon" type="image/png" href="./icon-ampli.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,7 +12,7 @@
     <meta property="og:url" content="https://amplichain.com/" />
     <meta property="og:title" content="Amplichain - sieć muzycznych możliwości" />
     <meta property="og:description" content="Platforma łącząca artystów, producentów i fanów muzyki w Polsce" />
-    <meta property="og:image" content="https://amplichain.com/og-image.webp" />
+    <meta property="og:image" content="https://amplichain.com/og-image.jpg" />
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://amplichain.com/" />
