--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Syne:wght@400;500;600;700&family=Work+Sans:wght@300;400;500;600&display=swap" rel="stylesheet">
+    <link rel="dns-prefetch" href="https://tally.so">
+    <link rel="dns-prefetch" href="https://embed.tawk.to">
+    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Syne:wght@400;500;600;700&family=Work+Sans:wght@300;400;500;600&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <noscript><link href="https://fonts.googleapis.com/css2?family=Syne:wght@400;500;600;700&family=Work+Sans:wght@300;400;500;600&display=swap" rel="stylesheet"></noscript>
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://amplichain.com/" />
@@ -19,7 +22,7 @@
     <meta property="twitter:title" content="Amplichain - sieć muzycznych możliwości" />
     <meta property="twitter:description" content="Platforma łącząca artystów, producentów i fanów muzyki w Polsce" />
     <meta property="twitter:image" content="https://amplichain.com/og-image.webp" />
-    <script async src="https://tally.so/widgets/embed.js"></script>
+    <script async src="https://tally.so/widgets/embed.js" defer></script>
     <title>Amplichain - sieć muzycznych możliwości</title>
   </head>
   <body>
